--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,14 +13,14 @@ edition = "2018"
 rust-version = "1.62"
 
 [workspace]
-members = ["impl"]
+members = ["impl", "macro"]
 
 [dependencies]
 erased-serde = "0.3"
 inventory = "0.3"
 once_cell = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-typetag-impl = { version = "=0.2.1", path = "impl" }
+typetag-macro = { version = "=0.2.1", path = "macro" }
 
 [dev-dependencies]
 bincode = "1.0"
