--- a/macro/Cargo.toml
+++ b/macro/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "typetag-impl"
+name = "typetag-macro"
 version = "0.2.1"
 authors = ["David Tolnay <dtolnay@gmail.com>"]
 license = "MIT OR Apache-2.0"
@@ -9,10 +9,13 @@ documentation = "https://docs.rs/typetag"
 readme = "README.md"
 edition = "2018"
 
+[lib]
+proc-macro = true
+
 [dependencies]
 proc-macro2 = "1.0"
-quote = "1.0"
-syn = { version = "1.0", features = ["full"] }
+typetag-impl = { version = "=0.2.1", path = "../impl" }
+
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
