--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ erased-serde = "0.3"
 inventory = "0.3"
 once_cell = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-typetag-macro = { version = "=0.2.1", path = "macro" }
+typetag-macro = { path = "macro" }
 
 [dev-dependencies]
 bincode = "1.0"
